[versioneer]
VCS = git
style = pep440
versionfile_source = PySide6MolecularNetwork/_version.py
versionfile_build = PySide6MolecularNetwork/_version.py
tag_prefix = v
parentdir_prefix =

[metadata]
name = PySide6MolecularNetwork
description = Qt Widget and Python bindings for visualisation of a network graph
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
platforms = any
url = https://github.com/metgem/QtMolecularNetwork
keywords = PySide6, PySide, Qt, Molecular Network
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Environment :: Win32 (MS Windows)
    Environment :: MacOS X
    Environment :: X11 Applications :: Qt
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    
[options]
zip_safe = False
packages = PySide6MolecularNetwork
python_requires = >=3.7
    
[options.packages.find]
where = shiboken